--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,14 @@
-<%= @category.name %><br>
+<div class="row">
+<div class="col s2 m4 l4">
+<b><h3><%= @category.name %></h3><br><b>
+
 <% @movies.each do |movie| %>
-<%= movie.name %>
+<div class="jumbotron"  style="height: auto;">
+  <div class="z-depth-1">
+    <center><h3 style="background-color: #fff; color: #006064;">
+<%= movie.name %><h3></center><br>
+</div></div>
 <% end %>
+
+</div>
+</div>
