--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -1,15 +1,19 @@
-<h3><%= @director.name %></h3><br>
+<div class="row">
+  <div class="col s2 m4 l4">
+    <h3><%= @director.name %></h3></div>
+  <div class="col s2 m4 l4">
+    <h4>Director</h4>
 
-<h4>Director</h4>
-<% @movies.each do |movie|  %>
-  <%= movie.name %>
-<% end %><br>
+    <div class="jumbotron" style="height: auto;">
+      <% @movies.each do |movie|  %>
 
-<h4>Actor</h4>
-
-<% @actor_movies.each do |actor| %>
-
-<% actor.movies.each do |movie|  %>
- <%= movie.name %>
-<% end %>
-<% end %>
+      <div class="z-depth-1">
+        <h3 style="background-color: #fff; color: #006064;">
+          <%= movie.name %></h3>
+      </div>
+      <% end %></div>
+  </div>
+  <div class="col s2 m4 l4">
+    <h4>Actor</h4>
+  </div>
+</div>
