--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,13 @@
-<h2>All Categories</h2>
-<% @categories.each do |category| %>
-<%= category.name %><br>
+<div class="row">
+  <h2>All Categories</h2>
 
+
+<% @categories.each do |category| %>
+<div class="col s2 m3 l3">
+  <div class="jumbotron"  style="height: auto;">
+    <div class="z-depth-1">
+      <center><h3>
+<%= link_to category.name, category_path(category) %></h3></center>
+</div></div></div>
 <% end %>
+</div>
