--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,12 @@
       <div class="nav-wrapper">
 
         <ul class="right hide-on-med-and-down">
+
           <% if user_signed_in? %>
+          <%= link_to 'All Actors', actors_path, class:"waves-effect waves-light btn" %>
+          <%= link_to 'All Directors', directors_path, class:"waves-effect waves-light btn" %>
+          <%= link_to 'All Movies', movies_path, class:"waves-effect waves-light btn" %>
+          <%= link_to 'All Categories', categories_path, class:"waves-effect waves-light btn" %>
           <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class:"waves-effect waves-light btn" %>
           <% else  %>
           <%= link_to 'Sign in', new_user_session_path, class:"waves-effect waves-light btn" %>
@@ -31,7 +36,7 @@
 <div class="footer-copyright">
            <div class="container">
            © 2015 CopyLeft
-           <a class="grey-text text-lighten-4 right" href="http://rubyonrails.org/">Ruby on Rails</a>
+           <a class="grey-text text-lighten-3 right" href="http://rubyonrails.org/">Ruby on Rails</a>
            </div>
          </div>
        </footer>
